# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-incident_bridge_env"
version = "0.1.0"
description = "Incident-response benchmark environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "openai>=2.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "incident_bridge_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["incident_bridge_env", "incident_bridge_env.server"]
package-dir = { "incident_bridge_env" = ".", "incident_bridge_env.server" = "server" }

[tool.pytest.ini_options]
testpaths = ["tests"]
